# PaperDesk-Conference-Portal

ConForum-Backend/: .gitignore  VERCEL_DEPLOY.md  package-lock.json  package.json  pyproject.toml
ConForum-Backend/conforum-backend/: .env.example  README.md  app.js  ecosystem.config.cjs  env.txt  package-lock.json  package.json  schema.sql  server.js
ConForum-Backend/conforum-backend/config/: mailer.js  multer.js  supabase.js
ConForum-Backend/conforum-backend/controller/: authController.js  authorController.js  conferenceController.js  emailController.js  organizerController.js  reviewerController.js
ConForum-Backend/conforum-backend/middleware/: multer.js
ConForum-Backend/conforum-backend/routes/: authRoute.js  authorRoute.js  conferenceRoute.js  emailRoute.js  organizerRoute.js  reviewerRoute.js
ConForum-Backend/conforum-backend/services/: emailService.js
ConForum-Backend/conforum-backend/utils_helpers/: authHelper.js  simplePdfValidator.js
ConForum-Backend/conforum-ieee-checker/: README.md  app.py  requirements.txt
ConForum-Backend/conforum-ieee-checker/api/: index.py
Conforum-Frontend/: .env  .gitignore  env.txt  package-lock.json  package.json  tailwind.config.js
Conforum-Frontend/public/: index.html  manifest.json
Conforum-Frontend/src/: App.js  index.css  index.js
PaperDesk-Backend/: .gitignore  Readme.md  start.sh
PaperDesk-Backend/PaperDesk-Backend/: .env.example  app.js  ecosystem.config.cjs  package-lock.json  package.json  schema.sql  server.js
PaperDesk-Frontend/: package-lock.json  package.json
PaperDesk-Frontend/src/: App.js  (+1 more)
(+118 files in other folders)
