[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.10"

dependencies = [
    "email-validator>=2.3.0",
    "flask>=3.0.0",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=25.3.0",
    "psycopg2-binary>=2.9.11",
    "pymupdf==1.23.0",
]
